--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,6 @@ jobs:
             xcode: "10.0.0"
         steps:
             - checkout
-            - run:
-                name: hello-world-test
-                command: echo "hello, world!"
+            - run: ./scripts/install
+            - run: sudo pip install nox
+            - run: nox
