scripts/install: Add a MacOS install function (via brew)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,7 @@ jobs:
         steps:
             - checkout
             - run: ./scripts/install
+            - run: which convert
+            - run: which pdflatex
             - run: sudo pip install nox
             - run: nox
